# gpkg

./: Makefile  Makefile.am  README  configure  configure.ac  gpkg  gpkg-test  reconf.sh
gpkg/: Makefile.am  gpkg  gpkg-test
man/: gpkg.1
xgfileinfo/: Makefile  Makefile.am  README  autoconf.h  bprogress.c  bprogress.h  file_info.c  finfo.c  finfo.h  getopt32.c  global.h  libbb.h  libcsv.c  libcsv.h  md5.c  md5.h  mddriver.c  messages.c  mv.c  platform.h  remove.h  rm.c  rmdir.c  time.c  xg.vim
