bin_PROGRAMS = xgfileinfo


xgfileinfo_SOURCES = file_info.c md5.c md5.h mddriver.c global.h mv.c \
	getopt32.c get_last_path_component.c concat_path_file.c cp_mv_stat.c \
	ask_confirmation.c ptr_to_globals.c perror_msg.c copy_file.c \
	remove_file.c verror_msg.c xfuncs_printf.c llist.c xatonum.c \
	last_char_is.c xfunc_die.c inode_hash.c concat_subpath_file.c \
	full_write.c messages.c copyfd.c xreadlink.c time.c default_error_retval.c \
	safe_write.c read.c bb_strtonum.c libbb.h coreutils.h platform.h \
	autoconf.h xatonum.h rm.c rmdir.c libcsv.h libcsv.c finfo.c finfo.h

EXTRA_xgfileinfo_SOURCES = xatonum_template.c

